tests/snapshots/insta_test__exclamation-2.snap
---
source: tests/insta_test.rs
expression: tester.program().as_ref().unwrap()
---
Program {
    components: [
        ProgramComponent {
            kind: FuncDef(
                Int,
                Declarator {
                    n_star: 0,
                    direct_declarator: Func(
                        Ident(
                            "main",
                        ),
                        [],
                        true,
                    ),
                },
                Stmt {
                    kind: Block(
                        [
                            Stmt {
                                kind: Declare(
                                    Declaration {
                                        ty_spec: Int,
                                        init_declarator: Some(
                                            InitDeclarator {
                                                declarator: Declarator {
                                                    n_star: 0,
                                                    direct_declarator: Ident(
                                                        "a",
                                                    ),
                                                },
                                                initializer: Some(
                                                    Expr(
                                                        Expr {
                                                            kind: Num(
                                                                1,
                                                            ),
                                                            debug_info: DebugInfo {
                                                                file_info: FileInfo {
                                                                    file_name: "",
                                                                    src: "\n    int main() {\n        int a = 1;\n        return !a;\n    }\n    ",
                                                                },
                                                                pos: Position {
                                                                    n_char: 16,
                                                                    n_line: 2,
                                                                },
                                                            },
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        debug_info: DebugInfo {
                                            file_info: FileInfo {
                                                file_name: "",
                                                src: "\n    int main() {\n        int a = 1;\n        return !a;\n    }\n    ",
                                            },
                                            pos: Position {
                                                n_char: 8,
                                                n_line: 2,
                                            },
                                        },
                                    },
                                ),
                            },
                            Stmt {
                                kind: Return(
                                    Expr {
                                        kind: Unary(
                                            LogicalNot,
                                            Expr {
                                                kind: LVar(
                                                    "a",
                                                ),
                                                debug_info: DebugInfo {
                                                    file_info: FileInfo {
                                                        file_name: "",
                                                        src: "\n    int main() {\n        int a = 1;\n        return !a;\n    }\n    ",
                                                    },
                                                    pos: Position {
                                                        n_char: 16,
                                                        n_line: 3,
                                                    },
                                                },
                                            },
                                        ),
                                        debug_info: DebugInfo {
                                            file_info: FileInfo {
                                                file_name: "",
                                                src: "\n    int main() {\n        int a = 1;\n        return !a;\n    }\n    ",
                                            },
                                            pos: Position {
                                                n_char: 15,
                                                n_line: 3,
                                            },
                                        },
                                    },
                                ),
                            },
                        ],
                    ),
                },
            ),
            debug_info: DebugInfo {
                file_info: FileInfo {
                    file_name: "",
                    src: "\n    int main() {\n        int a = 1;\n        return !a;\n    }\n    ",
                },
                pos: Position {
                    n_char: 4,
                    n_line: 1,
                },
            },
        },
    ],
}
