tests/snapshots/insta_test__exclamation-3.snap
---
source: tests/insta_test.rs
expression: tester.conv_program().as_ref().unwrap()
---
ConvProgram {
    components: [
        Func(
            ConvFuncDef {
                ty: Func {
                    ret_ty: Base(
                        Int,
                    ),
                    args: [],
                    is_flexible: true,
                },
                name: "main",
                args: [],
                body: Block(
                    [
                        Expr(
                            ConvExpr {
                                kind: Assign(
                                    ConvExpr {
                                        kind: LVar(
                                            LVar {
                                                offset: 4,
                                                ty: Base(
                                                    Int,
                                                ),
                                            },
                                        ),
                                        ty: Base(
                                            Int,
                                        ),
                                        debug_info: DebugInfo {
                                            file_info: FileInfo {
                                                file_name: "not impl name.c",
                                                src: "\n    int main() {\n        int a = 1;\n        return !a;\n    }\n    ",
                                            },
                                            pos: Position {
                                                n_char: 8,
                                                n_line: 2,
                                            },
                                        },
                                    },
                                    ConvExpr {
                                        kind: Num(
                                            1,
                                        ),
                                        ty: Base(
                                            Int,
                                        ),
                                        debug_info: DebugInfo {
                                            file_info: FileInfo {
                                                file_name: "not impl name.c",
                                                src: "\n    int main() {\n        int a = 1;\n        return !a;\n    }\n    ",
                                            },
                                            pos: Position {
                                                n_char: 16,
                                                n_line: 2,
                                            },
                                        },
                                    },
                                ),
                                ty: Base(
                                    Int,
                                ),
                                debug_info: DebugInfo {
                                    file_info: FileInfo {
                                        file_name: "not impl name.c",
                                        src: "\n    int main() {\n        int a = 1;\n        return !a;\n    }\n    ",
                                    },
                                    pos: Position {
                                        n_char: 8,
                                        n_line: 2,
                                    },
                                },
                            },
                        ),
                        Return(
                            ConvExpr {
                                kind: Binary(
                                    ConvBinary {
                                        kind: Eq,
                                        lhs: ConvExpr {
                                            kind: LVar(
                                                LVar {
                                                    offset: 4,
                                                    ty: Base(
                                                        Int,
                                                    ),
                                                },
                                            ),
                                            ty: Base(
                                                Int,
                                            ),
                                            debug_info: DebugInfo {
                                                file_info: FileInfo {
                                                    file_name: "not impl name.c",
                                                    src: "\n    int main() {\n        int a = 1;\n        return !a;\n    }\n    ",
                                                },
                                                pos: Position {
                                                    n_char: 16,
                                                    n_line: 3,
                                                },
                                            },
                                        },
                                        rhs: ConvExpr {
                                            kind: Num(
                                                0,
                                            ),
                                            ty: Base(
                                                Int,
                                            ),
                                            debug_info: DebugInfo {
                                                file_info: FileInfo {
                                                    file_name: "not impl name.c",
                                                    src: "\n    int main() {\n        int a = 1;\n        return !a;\n    }\n    ",
                                                },
                                                pos: Position {
                                                    n_char: 15,
                                                    n_line: 3,
                                                },
                                            },
                                        },
                                    },
                                ),
                                ty: Base(
                                    Int,
                                ),
                                debug_info: DebugInfo {
                                    file_info: FileInfo {
                                        file_name: "not impl name.c",
                                        src: "\n    int main() {\n        int a = 1;\n        return !a;\n    }\n    ",
                                    },
                                    pos: Position {
                                        n_char: 15,
                                        n_line: 3,
                                    },
                                },
                            },
                            "main",
                        ),
                    ],
                ),
                stack_size: 4,
            },
        ),
    ],
}
