tests/snapshots/insta_test__exclamation.snap
---
source: tests/insta_test.rs
expression: tester.tokens().as_ref().unwrap()
---
[
    Token {
        kind: Type(
            Int,
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\n    int main() {\n        int a = 1;\n        return !a;\n    }\n    ",
            },
            pos: Position {
                n_char: 4,
                n_line: 1,
            },
        },
    },
    Token {
        kind: Ident(
            "main",
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\n    int main() {\n        int a = 1;\n        return !a;\n    }\n    ",
            },
            pos: Position {
                n_char: 8,
                n_line: 1,
            },
        },
    },
    Token {
        kind: OpenDelim(
            Paren,
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\n    int main() {\n        int a = 1;\n        return !a;\n    }\n    ",
            },
            pos: Position {
                n_char: 12,
                n_line: 1,
            },
        },
    },
    Token {
        kind: CloseDelim(
            Paren,
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\n    int main() {\n        int a = 1;\n        return !a;\n    }\n    ",
            },
            pos: Position {
                n_char: 13,
                n_line: 1,
            },
        },
    },
    Token {
        kind: OpenDelim(
            Brace,
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\n    int main() {\n        int a = 1;\n        return !a;\n    }\n    ",
            },
            pos: Position {
                n_char: 15,
                n_line: 1,
            },
        },
    },
    Token {
        kind: Type(
            Int,
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\n    int main() {\n        int a = 1;\n        return !a;\n    }\n    ",
            },
            pos: Position {
                n_char: 8,
                n_line: 2,
            },
        },
    },
    Token {
        kind: Ident(
            "a",
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\n    int main() {\n        int a = 1;\n        return !a;\n    }\n    ",
            },
            pos: Position {
                n_char: 12,
                n_line: 2,
            },
        },
    },
    Token {
        kind: Eq,
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\n    int main() {\n        int a = 1;\n        return !a;\n    }\n    ",
            },
            pos: Position {
                n_char: 14,
                n_line: 2,
            },
        },
    },
    Token {
        kind: Num(
            1,
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\n    int main() {\n        int a = 1;\n        return !a;\n    }\n    ",
            },
            pos: Position {
                n_char: 16,
                n_line: 2,
            },
        },
    },
    Token {
        kind: Semi,
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\n    int main() {\n        int a = 1;\n        return !a;\n    }\n    ",
            },
            pos: Position {
                n_char: 17,
                n_line: 2,
            },
        },
    },
    Token {
        kind: Return,
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\n    int main() {\n        int a = 1;\n        return !a;\n    }\n    ",
            },
            pos: Position {
                n_char: 8,
                n_line: 3,
            },
        },
    },
    Token {
        kind: Exclamation,
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\n    int main() {\n        int a = 1;\n        return !a;\n    }\n    ",
            },
            pos: Position {
                n_char: 15,
                n_line: 3,
            },
        },
    },
    Token {
        kind: Ident(
            "a",
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\n    int main() {\n        int a = 1;\n        return !a;\n    }\n    ",
            },
            pos: Position {
                n_char: 16,
                n_line: 3,
            },
        },
    },
    Token {
        kind: Semi,
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\n    int main() {\n        int a = 1;\n        return !a;\n    }\n    ",
            },
            pos: Position {
                n_char: 17,
                n_line: 3,
            },
        },
    },
    Token {
        kind: CloseDelim(
            Brace,
        ),
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\n    int main() {\n        int a = 1;\n        return !a;\n    }\n    ",
            },
            pos: Position {
                n_char: 4,
                n_line: 4,
            },
        },
    },
    Token {
        kind: Eof,
        debug_info: DebugInfo {
            file_info: FileInfo {
                file_name: "not impl name.c",
                src: "\n    int main() {\n        int a = 1;\n        return !a;\n    }\n    ",
            },
            pos: Position {
                n_char: 4,
                n_line: 5,
            },
        },
    },
]
